--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,14 @@
 ---
 title: "Habetan Labs"
+image: media/aspens-over.jpg
+toc: false
+about:
+  template: jolla
+  image-shape: round
+  image-width: 17em
+  links: 
+    - text: Email
+      href: mailto:habetanlabs@proton.me
 ---
 
 Habetan Labs is an experiment in supporting and valuing systems and networks of care that connect us and enable mutual flourishing. This website is a collective effort, but the primary site admin goes by kart.
