Final polishing on a few pages

--- a/posts/2025-02-07-welcome/index.qmd
+++ b/posts/2025-02-07-welcome/index.qmd
@@ -10,7 +10,7 @@ draft: false
 ---
 
 ::: column-page
-![](river.jpg)
+![](river.jpg "A picture of a calm river under stormy skies")
 :::
 
 Welcome.
