--- a/resources.qmd
+++ b/resources.qmd
@@ -4,8 +4,20 @@ author: "habetan-labs"
 date-modified: "02-07-2025"
 ---
 
-## How We Made This Site
+## Caring for yourself
+[Somatic Self Care](https://hopkinsmedicine.org/office-of-well-being/connection-support/somatic-self-care)
 
-This site was made using [Quarto](https://quarto.org/docs/websites/), [RStudio](https://posit.co/download/rstudio-desktop/), and [Github Pages](https://pages.github.com). 
+## Booklist
+[The Serviceberry](https://bookshop.org/p/books/the-serviceberry-robin-wall-kimmerer/21259025)
+[Hope in the Dark](https://bookshop.org/p/books/hope-in-the-dark-untold-histories-wild-possibilities-updated-rebecca-solnit/8203155)
+[Let This Radicalize You](https://haymarketbooks.org/books/1922-let-this-radicalize-you)
+
+## Good online reading
+[The Marginalian](https://themarginalian.org)
+[Kottke](https://kottke.org)
+
+## How we made this site
+
+This site was made using [Quarto](https://quarto.org/docs/websites/), [RStudio](https://posit.co/download/rstudio-desktop/), and [Github Pages](https://pages.github.com).
 
 This [guide from Sam Csik](https://ucsb-meds.github.io/creating-quarto-websites/) was invaluable in building this site. Sam's [guide on adding a quarto blog](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) is also excellent.
