fixed pdf link for real this time

--- a/posts/2025-02-14-answers/index.qmd
+++ b/posts/2025-02-14-answers/index.qmd
@@ -79,7 +79,7 @@ Think of someone whose company you enjoy, who makes you smile, or who you know l
 
 [Join a class](https://www.barnraisersproject.org/our-classes.html)
 
-There are only 1,000 workdays in this administration. You’ve survived 20 of them. [Get yourself a chart](Day1000_tracker.pdf) (or make your own!) and mark them off.
+There are only 1,000 workdays in this administration. You’ve survived 20 of them. [Get yourself a chart](https://habetan-labs.github.io/media/Day1000_tracker.pdf) (or make your own!) and mark them off.
 
 [Ways to take in information without getting pulled under](https://brilliantcrank.com/the-dice-035/)
 
