--- a/posts/2025-02-14-answers/index.qmd
+++ b/posts/2025-02-14-answers/index.qmd
@@ -4,6 +4,8 @@ author: "kart"
 date: 2025-02-14
 categories: [reflection, connection, action, reading]
 image: postit.jpg
+toc: false
+link-external-newwindow: true
 draft: false
 ---
 
@@ -79,7 +81,7 @@ Think of someone whose company you enjoy, who makes you smile, or who you know l
 
 [Join a class](https://www.barnraisersproject.org/our-classes.html)
 
-There are only 1,000 workdays in this administration. You’ve survived 20 of them. [Get yourself a chart](https://habetan-labs.github.io/media/Day1000_tracker.pdf) (or make your own!) and mark them off.
+There are only 1,000 workdays in this administration. You’ve survived 20 of them. [Get a chart](https://docs.google.com/viewer?url=https://raw.githubusercontent.com/habetan-labs/habetan-labs.github.io/main/media/Day1000_tracker.pdf) (or make your own) and mark them off!
 
 [Ways to take in information without getting pulled under](https://brilliantcrank.com/the-dice-035/)
 
