--- a/posts/2025-05-01-to-success/index.qmd
+++ b/posts/2025-05-01-to-success/index.qmd
@@ -6,6 +6,7 @@ categories: [reflection, connection, action, poetry]
 image: poppy.jpg
 toc: false
 link-external-newwindow: true
+list-style-type: none
 draft: false
 ---
 
@@ -13,51 +14,55 @@ draft: false
 ![](poppy.jpg "A picture of a block-printed poppy with one open flower and one closed seed head")
 :::
 
-Being quiet will not save you\
-Being good will not save you\
-Following the rules will not save you at all\
-The rules can always be changed
 
-Being small will not save you\
-Being innocent will not save you\
-Being young will not save you either\
-Sometimes I think they fear youth most of all
+Being quiet will not save you\ 
+Being good will not save you\   
+Following the rules will not save you at all\   
+The rules can always be changed\   
+\
 
-Being smart will not save you\
-Being wise will not save you\
-All the knowledge in the world will not save you\
-Knowledge might mean you know too much
+Being small will not save you  
+Being innocent will not save you   
+Being young will not save you either   
+Sometimes I think they fear youth most of all   
 
-Honesty will not save you\
-Lies will not save you\
-Oaths, allegiances, magic words have no power\
-What is true and what is not does not matter anymore
+Being smart will not save you   
+Being wise will not save you   
+All the knowledge in the world will not save you   
+Knowledge might mean you know too much   
 
-Strength will not save you\
-Weakness will not save you\
-Old age will not exempt you\
-For they are afraid of even their shadows
+Honesty will not save you   
+Lies will not save you   
+Oaths, allegiances, magic words have no power   
+What is true and what is not does not matter anymore   
 
-Money will not save you\
-Investments will not save you\
-You cannot buy your way out of this one\
-What you could give they can also take
+Strength will not save you   
+Weakness will not save you   
+Old age will not exempt you   
+For they are afraid of even their shadows    
 
-Being white will not save you\
-Being a citizen will not save you\
-Being a man might help but will not be enough\
-Anyone can be made out to be an enemy
+Money will not save you   
+Investments will not save you   
+You cannot buy your way out of this one   
+What you could give they can also take   
 
-So what hope could we have then\
-In the face of all this fear
+Being white will not save you   
+Being a citizen will not save you   
+Being a man might help but will not be enough   
+Anyone can be made out to be an enemy   
 
-Only the warmth of a lover's hand\
-The food from a neighbor\
-The letter from a friend\
-The weight of a child's body\
-The shouts of our clamoring kin\
-The determination that declares\
-They may take one of us but\
-They cannot take us all
+So what hope could we have then   
+In the face of all this fear   
+
+
+Only the warmth of a lover's hand   
+The food from a neighbor   
+The letter from a friend   
+The weight of a child's body   
+The shouts of our clamoring kin   
+The determination that declares   
+They may take one of us but   
+They cannot take us all   
+
 
 We need each other: [build something good](https://thewhitepages.net/p/twenty-questions-for-big-hearted)
