Actually fixed the spacing...hopefully

--- a/posts/2025-05-01-to-success/index.qmd
+++ b/posts/2025-05-01-to-success/index.qmd
@@ -15,11 +15,11 @@ draft: false
 :::
 
 
-Being quiet will not save you\ 
-Being good will not save you\   
-Following the rules will not save you at all\   
-The rules can always be changed\   
-\
+
+Being quiet will not save you    
+Being good will not save you   
+Following the rules will not save you at all    
+The rules can always be changed     
 
 Being small will not save you  
 Being innocent will not save you   
